2007-07-25  Richard Hughes  <richard@hughsie.com>

	* src/phonemgr-object.c: (phonemgr_object_coldplug):
	* src/phonemgr-object.h:
	Fix the coldplug method so it can work. You _have_ to return TRUE,
	or return a GError.

2007-07-25  Richard Hughes  <richard@hughsie.com>

	* src/phonemgr-object.c: (phonemgr_object_register),
	(phonemgr_object_init):
	Actually register a bus name so other session dbus clients can
	connect to a named service.

2007-07-24  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Update gnokii requirements now that 0.6.18
	has been released

2007-07-24  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am:
	* src/icon.c: (tray_icon_init):
	* src/main.c:
	* ui/icons/16x16/status/Makefile.am:
	* ui/icons/22x22/status/Makefile.am:
	* ui/icons/24x24/status/Makefile.am:
	Update the icon loading to follow the best practices at
	http://live.gnome.org/ThemableAppSpecificIcons
	Make sure your hicolor theme is new enough, otherwise it just
	won't load anything

2007-07-23  Bastien Nocera  <hadess@hadess.net>

	* src/org_gnome_phone_Manager.xml: add the Coldplug method
	* src/phonemgr-object.c:
	(phonemgr_object_emit_number_batteries_changed),
	(phonemgr_object_emit_battery_state_changed),
	(phonemgr_object_coldplug):
	* src/phonemgr-object.h:
	Implement the coldplug method, so that gnome-power-manager can
	trigger us emitting signals when started after gnome-phone-manager

2007-07-23  Bastien Nocera  <hadess@hadess.net>

	* configure.in: generate the Makefiles for the new icons
	* src/ui.c: (on_conn_port_change), (populate_prefs), (apply_prefs):
	Kill the global conn_port variable
	* ui/icons/16x16/status/Makefile.am:
	* ui/icons/22x22/status/Makefile.am: update to distcheck the SVG files

2007-07-23  Andreas Nilsson  <nisses.mail@home.se>

	* ui/icons/24x24/status/phone-connecting:
	* ui/icons/24x24/status/phone-error:
	* ui/icons/24x24/status/phone-message: 24x24 canvas size added.

2007-07-23  Andreas Nilsson  <nisses.mail@home.se>
